--- a/style/1_nav.css
+++ b/style/1_nav.css
@@ -1,6 +1,3 @@
-body{
-    background-color: rgb(176, 176, 189);
-}
 nav {
     width: 100%;
     line-height: 50px;
@@ -9,7 +6,6 @@ nav {
     background-color: rgb(97, 92, 92);
 }
 
-
 nav>ul>li {
     list-style: none;
     display: inline-block;
@@ -17,13 +13,13 @@ nav>ul>li {
 }
 
 nav>ul>li:hover {
-    background-color: rgb(170, 162, 162);    
+    background-color: rgb(170, 162, 162);
 }
 
-a {
-    text-decoration: none;    
+nav>ul>li>a {
+    text-decoration: none;
 }
 
-a:visited {
+nav>ul>li>a:visited {
     color: white;
 }
