--- a/style/0_base.css
+++ b/style/0_base.css
@@ -1,11 +1,21 @@
+*:focus{
+    outline: none;
+    border-width: 5px;
+    border-color: rgb(36, 137, 196);
+}
+
 body{
     background-color: rgb(176, 176, 189);
     font-family: Tahoma, sans-serif;
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
 }
 
 h1{
     text-align: center;
     padding: 10px;
+    color: white;
 }
 
 section{
@@ -14,5 +24,5 @@ section{
     margin: 0 auto;
     background-color: rgb(74, 149, 168);
     border-radius: 25px;
-    box-shadow: 10px 10px 5px grey;
+    box-shadow: 10px 10px 5px rgb(75, 94, 110);
 }
